--- a/src/app/task/task.component.css
+++ b/src/app/task/task.component.css
@@ -1,3 +1,10 @@
 mat-card {
-    margin: 5px;    
+    margin: 5px;
+}
+
+.member-img {
+  height: 16px;
+  width: 16px;
+  margin-left: 10px;
+  border-radius: 50%;
 }
