--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -14,6 +14,9 @@
     background-color: lightblue;
     direction: rtl;
     text-align: center;
+    min-width: 200px !important;
+    width: 200px !important;
+    max-width: 300px !important;
 }
 
 .my-sidenav button{
@@ -58,4 +61,25 @@ mat-sidenav-content {
   margin-top: 5px;
   margin-left: 5px;
   border-radius: 50%;
+}
+
+.sideBarIcon {
+  width: 50px;
+  float: right;
+  text-align: center;
+  line-height: 50px;
+  position: absolute;
+}
+
+.sideBarText {
+  margin-right: 30px;
+  font-size: 1.1em;
+  width: 75%;
+  float: left;
+}
+
+.sideBarItem {
+  transition: all .3s ease;
+  height: 50px;
+  line-height: 50px;
 }
