--- a/src/app/create-board-dialog/create-board-dialog.component.html
+++ b/src/app/create-board-dialog/create-board-dialog.component.html
@@ -52,10 +52,10 @@
     </section>
   </form>
     <div mat-dialog-actions class="dialog-actions">
-      <button mat-raised-button color="primary" [mat-dialog-close]="submitForm()" [disabled]="formIsValid()">
+      <button mat-raised-button color="primary" class="primary-color-hover" [mat-dialog-close]="submitForm()" [disabled]="formIsValid()">
         צור
       </button>
-      <button mat-raised-button color="primary" (click)="cancelDialog()">
+      <button mat-raised-button color="primary" class="primary-color-hover" (click)="cancelDialog()">
         ביטול
       </button>
     </div>
