--- a/src/app/create-event-dialog/create-event-dialog.component.html
+++ b/src/app/create-event-dialog/create-event-dialog.component.html
@@ -43,10 +43,10 @@
     </section>-->
   </div>
   <div mat-dialog-actions class="dialog-actions">
-    <button mat-raised-button color="primary" [mat-dialog-close]="submitForm()" [disabled]="!formIsValid()">
+    <button mat-raised-button class="primary-color-hover" color="primary" [mat-dialog-close]="submitForm()" [disabled]="!formIsValid()">
       צור
     </button>
-    <button mat-raised-button color="primary" mat-dialog-close (click)="cancelDialog()">
+    <button mat-raised-button class="primary-color-hover" color="primary" mat-dialog-close (click)="cancelDialog()">
       ביטול
     </button>
   </div>
