--- a/src/app/delete-task-dialog/delete-task-dialog.component.html
+++ b/src/app/delete-task-dialog/delete-task-dialog.component.html
@@ -1,10 +1,10 @@
 <div class="delete-task-container">
   <h1 mat-dialog-title>האם ברצונך למחוק את המשימה?</h1>
   <div mat-dialog-actions class="dialog-actions">
-    <button mat-raised-button color="primary" [mat-dialog-close]="submitForm()">
+    <button mat-raised-button color="primary" class="primary-color-hover" [mat-dialog-close]="submitForm()">
       מחק
     </button>
-    <button mat-raised-button color="primary" mat-dialog-close (click)="cancelDialog()">
+    <button mat-raised-button color="primary" class="primary-color-hover" mat-dialog-close (click)="cancelDialog()">
       ביטול
     </button>
   </div>
