--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,6 +20,7 @@
 <mat-sidenav-container class="nav-container" *ngIf="isAuthenticated">
   <mat-sidenav opened=true mode="side" position="end" class="my-sidenav">
     <mat-nav-list class="vertical-center">
+        <a class="sideBarItem" mat-list-item [routerLink]="['/my-profile']"><span class="sideBarIcon fa fa-star"></span><span class="sideBarText">הפרופיל שלי</span></a>
         <a class="sideBarItem" mat-list-item [routerLink]="['/my-boards']"><span class="sideBarIcon fa fa-star"></span><span class="sideBarText">הלוחות שלי</span></a>
         <a class="sideBarItem" mat-list-item [routerLink]="['/my-tasks']"><span class="sideBarIcon fa fa-star"></span><span class="sideBarText">המשימות שלי</span></a>
         <a class="sideBarItem" mat-list-item [routerLink]="['/my-schedule']"><span class="sideBarIcon fa fa-star"></span><span class="sideBarText">הלו"ז שלי</span></a>
