Update if user  change his color

--- a/src/app/Components/board-view/board-view.component.css
+++ b/src/app/Components/board-view/board-view.component.css
@@ -85,7 +85,7 @@ mat-grid-list {
     margin-top: 0;
     width: 100%;
     color: white;
-    background-color: #3f51b5;
+    background-color: #b0caf9;
     vertical-align: middle;
     height: 20%;
 }
