--- a/src/app/Components/my-profile/my-profile.component.html
+++ b/src/app/Components/my-profile/my-profile.component.html
@@ -12,8 +12,13 @@
     </div>
     <div>
       <u>צבע מועדף:</u>
-      <input type="color" value="{{this.currUser.color}}"/>
+      <input type="color" [(ngModel)]="this.currUser.color" />
     </div>
     </span>
+    <div mat-dialog-actions class="dialog-actions">
+      <button mat-raised-button class="primary-color-hover" color="primary" (click)="updateUser()">
+        עדכן
+      </button>
+    </div>
   </section>
 </div>
