Fixed edit event dialog

--- a/src/app/Dialogs/edit-event-dialog/edit-event-dialog.component.html
+++ b/src/app/Dialogs/edit-event-dialog/edit-event-dialog.component.html
@@ -9,14 +9,14 @@
     <section class="datetime-picker">
       <label>תאריך תחילה</label>
         <date-time-picker
-          [(ngModel)]="event.startDate"
+          [(ngModel)]="startDate"
           placeholder="תאריך תחילה">
         </date-time-picker>
     </section>
     <section class="datetime-picker">
         <label>תאריך סיום</label>
         <date-time-picker
-          [(ngModel)]="event.endDate"
+          [(ngModel)]="endDate"
           placeholder="תאריך סיום">
         </date-time-picker>
     </section>
