--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,10 +20,10 @@
 <mat-sidenav-container class="nav-container" *ngIf="isAuthenticated">
   <mat-sidenav opened=true mode="side" position="end" class="my-sidenav">
     <mat-nav-list class="vertical-center">
-        <a class="sideBarItem" mat-list-item [routerLink]="['/my-profile']"><span class="sideBarIcon fa fa-star"></span><span class="sideBarText">הפרופיל שלי</span></a>
-        <a class="sideBarItem" mat-list-item [routerLink]="['/my-boards']"><span class="sideBarIcon fa fa-star"></span><span class="sideBarText">הלוחות שלי</span></a>
-        <a class="sideBarItem" mat-list-item [routerLink]="['/my-tasks']"><span class="sideBarIcon fa fa-star"></span><span class="sideBarText">המשימות שלי</span></a>
-        <a class="sideBarItem" mat-list-item [routerLink]="['/my-schedule']"><span class="sideBarIcon fa fa-star"></span><span class="sideBarText">הלו"ז שלי</span></a>
+        <a class="sideBarItem" mat-list-item [routerLink]="['/my-profile']"><span class="sideBarIcon fa fa-user"></span><span class="sideBarText">הפרופיל שלי</span></a>
+        <a class="sideBarItem" mat-list-item [routerLink]="['/my-boards']"><span class="sideBarIcon fa fa-clipboard-check"></span><span class="sideBarText">הלוחות שלי</span></a>
+        <a class="sideBarItem" mat-list-item [routerLink]="['/my-tasks']"><span class="sideBarIcon fa fa-tasks"></span><span class="sideBarText">המשימות שלי</span></a>
+        <a class="sideBarItem" mat-list-item [routerLink]="['/my-schedule']"><span class="sideBarIcon fa fa-calendar-alt"></span><span class="sideBarText">הלו"ז שלי</span></a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
