--- a/src/app/Components/board-view/board-view.component.css
+++ b/src/app/Components/board-view/board-view.component.css
@@ -28,7 +28,7 @@
     font-family: Arial, Helvetica, sans-serif;
     width: 100%;
     height: 100%;
-    background-color: lightblue;
+    background-color: #dbe5e8;
     border-radius: 10%;
 }
 
