--- a/src/app/Components/task/task.component.html
+++ b/src/app/Components/task/task.component.html
@@ -1,4 +1,4 @@
-<mat-card>
+<mat-card [style.border-color]="task.owner.color">
   <mat-card-title>{{task.title}}</mat-card-title>
   <mat-card-subtitle>
     <label>משויך ל:</label>
