change a little the design

--- a/src/app/Components/board-view/board-view.component.html
+++ b/src/app/Components/board-view/board-view.component.html
@@ -13,10 +13,10 @@
         <section class="actions">
           <ul style="list-style-type: none">
             <li>
-              <button mat-raised-button (click)="openCreateTaskDialog()" color="primary" class="primary-color-hover">הוסף משימה</button>
+              <button mat-raised-button (click)="openCreateTaskDialog()" color="primary" class="primary-color-hover"><span class="fa fa-plus-circle"></span> הוסף משימה</button>
             </li>
             <li>
-              <button mat-raised-button (click)="assignBoardTasks()" color="primary" class="primary-color-hover">חלק משימות מחדש</button>
+              <button mat-raised-button (click)="assignBoardTasks()" color="primary" class="primary-color-hover"><span class="fa fa-sync-alt"></span> חלק משימות מחדש</button>
             </li>
           </ul>
         </section>
