--- a/src/app/Components/my-profile/my-profile.component.html
+++ b/src/app/Components/my-profile/my-profile.component.html
@@ -17,6 +17,7 @@
     </span>
     <div mat-dialog-actions class="dialog-actions">
       <button mat-raised-button class="primary-color-hover" color="primary" (click)="updateUser()">
+        <span class="fa fa-edit"></span>
         עדכן
       </button>
     </div>
