--- a/src/app/Dialogs/create-task-dialog/create-task-dialog.component.html
+++ b/src/app/Dialogs/create-task-dialog/create-task-dialog.component.html
@@ -40,10 +40,10 @@
     </section>
   </div>
   <div mat-dialog-actions class="dialog-actions">
-    <button mat-raised-button class="primary-color-hover" color="primary" [mat-dialog-close]="submitForm()">
+    <button mat-raised-button class="primary-color-hover" color="primary" [mat-dialog-close]="submitForm()"><span class="fa fa-plus-circle"></span>
       הוסף
     </button>
-    <button mat-raised-button class="primary-color-hover" color="primary" mat-dialog-close (click)="cancelDialog()">
+    <button mat-raised-button class="primary-color-hover" color="primary" mat-dialog-close (click)="cancelDialog()"><span class="fa fa-times-circle"></span> 
       ביטול
     </button>
   </div>
