--- a/src/app/Dialogs/edit-event-dialog/edit-event-dialog.component.html
+++ b/src/app/Dialogs/edit-event-dialog/edit-event-dialog.component.html
@@ -22,10 +22,10 @@
     </section>
   </div>
   <div mat-dialog-actions class="dialog-actions">
-    <button mat-raised-button class="primary-color-hover" color="primary" [mat-dialog-close]="submitForm()">
+    <button mat-raised-button class="primary-color-hover" color="primary" [mat-dialog-close]="submitForm()"><span class="fa fa-edit"></span>
       עדכן
     </button>
-    <button mat-raised-button class="primary-color-hover" color="primary" mat-dialog-close (click)="cancelDialog()">
+    <button mat-raised-button class="primary-color-hover" color="primary" mat-dialog-close (click)="cancelDialog()"><span class="fa fa-times-circle"></span> 
       ביטול
     </button>
   </div>
