--- a/src/app/Dialogs/edit-task-dialog/edit-task-dialog.component.html
+++ b/src/app/Dialogs/edit-task-dialog/edit-task-dialog.component.html
@@ -40,10 +40,10 @@
     </section>
   </div>
   <div mat-dialog-actions class="dialog-actions">
-    <button mat-raised-button color="primary" class="primary-color-hover" [mat-dialog-close]="submitForm()">
+    <button mat-raised-button color="primary" class="primary-color-hover" [mat-dialog-close]="submitForm()"><span class="fa fa-edit"></span>
       עדכן
     </button>
-    <button mat-raised-button color="primary" class="primary-color-hover" mat-dialog-close (click)="cancelDialog()">
+    <button mat-raised-button color="primary" class="primary-color-hover" mat-dialog-close (click)="cancelDialog()"><span class="fa fa-times-circle"></span> 
       ביטול
     </button>
   </div>
