--- a/src/app/Components/task/task.component.html
+++ b/src/app/Components/task/task.component.html
@@ -1,20 +1,22 @@
-<mat-card [style.border-color]="task.owner.color">
-  <mat-card-title>{{task.title}}</mat-card-title>
-  <mat-card-subtitle>
-    <label>משויך ל:</label>
+<mat-card class="task-card-content" [class.out-of-board-task]="showOpenBoard" [style.border-color]="task.owner.color">
+  <div class="task-title">{{task.title}}</div>
+  <div class="task-container">
+    <div>משויך ל:</div>
     <img *ngIf="task.owner.image !== undefined" [src]="task.owner.image" class="member-img">
     <img *ngIf="task.owner.image === undefined" src="/assets/src/unknown.jpg" class="member-img">
     <span>{{task.owner.name}}</span>
     <br/>
-    <section *ngIf="showOpenBoard">
-      <label>שם לוח:</label>
-      <a [routerLink]="['/board', task.boardId]">{{task.boardName}}</a>
-    </section>
-  </mat-card-subtitle>
+  </div>
+  <div class="task-board-name" *ngIf="showOpenBoard">
+    <a [routerLink]="['/board', task.boardId]">{{task.boardName}}</a>
+  </div>
   <mat-progress-bar *ngIf="showProgressBar" mode="determinate" [value]="calculateCompletedPrecentage(task)"></mat-progress-bar>
-  <mat-card-actions>
-    <button mat-raised-button (click)="openEditTaskDialog()" *ngIf="showEdit" color="primary" class="primary-color-hover"><span class="fa fa-edit"></span> ערוך</button>
-    <button mat-raised-button (click)="openDeleteTaskDialog()" *ngIf="showDelete" color="primary" class="primary-color-hover"><span class="fa fa-trash-alt"></span> מחק</button>
-    <button mat-raised-button *ngIf="showOpenBoard" [routerLink]="['/board', task.boardId]" color="primary" class="primary-color-hover"><span class="fa fa-clipboard-list"></span> פתח לוח</button>
-  </mat-card-actions>
+  <div class="actions-container">
+    <div class="button" (click)="openEditTaskDialog()"><span class="fa fa-edit"></span></div>
+    <!-- <button mat-raised-button (click)="openEditTaskDialog()" *ngIf="showEdit" color="primary" class="primary-color-hover"><span class="fa fa-edit"></span> ערוך</button> -->
+    <div class="button" (click)="openDeleteTaskDialog()"><span class="fa fa-trash-alt"></span></div>
+    <!-- <button mat-raised-button (click)="openDeleteTaskDialog()" *ngIf="showDelete" color="primary" class="primary-color-hover"><span class="fa fa-trash-alt"></span> מחק</button> -->
+    <!-- <div *ngIf="showOpenBoard" [routerLink]></div> -->
+    <!-- <button mat-raised-button *ngIf="showOpenBoard" [routerLink]="['/board', task.boardId]" color="primary" class="primary-color-hover"><span class="fa fa-clipboard-list"></span> פתח לוח</button> -->
+  </div>
 </mat-card>
