--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -3,20 +3,25 @@
 }
 
 .nav-container {
-    position: absolute;
-    top: 100px;
-    bottom: 0;
-    left: 0;
-    right: 0;
-  }
+  display: flex;
+  height: calc(100% - 64px);
+}
+
+.icon-container {
+  width: 160px;
+  display: block;
+  text-align: center;
+}
 
 .my-sidenav {
-    background-color: lightblue;
+    background-color: #679ED2;
+    color: white !important;
     direction: rtl;
     text-align: center;
     min-width: 200px !important;
     width: 200px !important;
     max-width: 300px !important;
+    height: calc(100%);
 }
 
 .my-sidenav button{
@@ -24,42 +29,48 @@
 }
 
 .mat-toolbar-row, .mat-toolbar-single-row {
-    height: 100px;
+  background-color: #0C5AA6;
 }
 
 mat-sidenav-content {
+    margin-left: 0 !important;
     text-align: center;
-    background-color: lightcyan;
+    width: 100%;
+    height: 100%;
+}
+
+.mat-drawer {
+  position: static !important;
 }
 
 .center {
     width: 100px;
     margin: auto;
-    margin-top: 30%;
 }
 
 .logo {
-  height: 120px;
+  height: 40px;
   cursor: pointer;
 }
 
 .auth-details {
   direction: rtl;
   height: 40px;
+  min-width: 220px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .logout {
   height: 20px;
   width: 20px;
   cursor: pointer;
-  margin-right: 5px;
 }
 
 .auth-img {
   height: 32px;
   width: 32px;
-  margin-top: 5px;
-  margin-left: 5px;
   border-radius: 50%;
 }
 
@@ -69,11 +80,13 @@ mat-sidenav-content {
   text-align: center;
   line-height: 50px;
   position: absolute;
+  color: white;
 }
 
 .sideBarText {
   margin-right: 30px;
   font-size: 1.1em;
+  color: white;
   width: 75%;
   float: left;
 }
