--- a/src/app/Components/my-boards/my-boards.component.css
+++ b/src/app/Components/my-boards/my-boards.component.css
@@ -3,7 +3,12 @@ mat-spinner {
 }
 
 mat-card {
-    width: 25%;
+    width: calc(25% - 20px);
+    margin-left: 5px;
+}
+
+mat-card mat-card-title {
+    font-size: 19px;
 }
 
 section {
@@ -26,5 +31,6 @@ button {
 .cards-container {
     display: flex;
     flex-wrap: wrap;
+    margin-top: 15px;
     direction: rtl;
 }
