--- a/src/app/Components/my-profile/my-profile.component.html
+++ b/src/app/Components/my-profile/my-profile.component.html
@@ -6,12 +6,12 @@
     <img src="{{this.currUser.image}}" class="profile-img">
     <span class="profile-details">
       <div>
-      <u>
-      שם היוזר:</u><b>  {{this.currUser.name}}
+      <span>
+      שם היוזר:</span><b>  {{this.currUser.name}}
       </b>
     </div>
     <div>
-      <u>צבע מועדף:</u>
+      <span>צבע מועדף:</span>
       <input type="color" [(ngModel)]="this.currUser.color" />
     </div>
     </span>
