--- a/src/app/Components/my-profile/my-profile.component.html
+++ b/src/app/Components/my-profile/my-profile.component.html
@@ -1,7 +1,7 @@
 <div>
   <h1>הפרופיל שלי</h1>
   <div class="line-separator"></div>
-  <mat-spinner *ngIf="loadingProfile"></mat-spinner>
+  <mat-spinner *ngIf="loadingProfile" class="center" ></mat-spinner>
   <section class="profile" [hidden]="loadingProfile">
     <img src="{{this.currUser.image}}" class="profile-img">
     <span class="profile-details">
@@ -16,7 +16,7 @@
     </div>
     </span>
     <div mat-dialog-actions class="dialog-actions">
-      <button mat-raised-button class="primary-color-hover" color="primary" (click)="updateUser()">
+      <button mat-raised-button class="primary-color-hover center" color="primary" (click)="updateUser()">
         <span class="fa fa-edit"></span>
         עדכן
       </button>
