--- a/src/app/Components/my-boards/my-boards.component.css
+++ b/src/app/Components/my-boards/my-boards.component.css
@@ -5,6 +5,7 @@ mat-spinner {
 mat-card {
     width: calc(25% - 20px);
     margin-left: 5px;
+    margin-bottom: 10px;
 }
 
 mat-card mat-card-title {
